FILE(GLOB SRC_FILES_SRC "*.cpp")
SET(SRC_FILES ${SRC_FILES_SRC})

FOREACH(SUB_DIR_ADD ${MODULES_PACKAGE} ${MODULES_USER})
 MESSAGE("SUB_DIR_ADD: ${SUB_DIR_ADD}")
 FILE(GLOB SRC_FILES_ADD "${SUB_DIR_ADD}/*.cpp")
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/${SUB_DIR_ADD})
 SET(SRC_FILES ${SRC_FILES} ${SRC_FILES_ADD})
ENDFOREACH(SUB_DIR_ADD ${MODULES_PACKAGE} ${MODULES_USER})


ADD_EXECUTABLE(liggghts ${SRC_FILES})
SET_TARGET_PROPERTIES(liggghts PROPERTIES OUTPUT_NAME "liggghts${SUFFIX}")

IF(JPEG_FOUND)
  TARGET_LINK_LIBRARIES(liggghts ${JPEG_LIBRARIES})
ENDIF(JPEG_FOUND)

IF(VTK_FOUND)
  TARGET_LINK_LIBRARIES(liggghts vtkHybrid)
ENDIF(VTK_FOUND)


INSTALL(TARGETS liggghts DESTINATION "bin/")
